tests/baselines/reference/jsdocDisallowedInTypescript.errors.txt
tests/cases/conformance/jsdoc/jsdocDisallowedInTypescript.ts(4,15): error TS17020: Adding a prefix '?' to the start of a type is not valid TypeScript syntax. Did you mean to write 'number'?
tests/cases/conformance/jsdoc/jsdocDisallowedInTypescript.ts(11,18): error TS2554: Expected 1 arguments, but got 2.
tests/cases/conformance/jsdoc/jsdocDisallowedInTypescript.ts(16,11): error TS17020: Adding a prefix '!' to the start of a type is not valid TypeScript syntax. Did you mean to write 'string'?
tests/cases/conformance/jsdoc/jsdocDisallowedInTypescript.ts(17,17): error TS17019: Adding a postfix '!' to the end of a type is not valid TypeScript syntax. Did you mean to write 'number'?
tests/cases/conformance/jsdoc/jsdocDisallowedInTypescript.ts(18,5): error TS2322: Type 'undefined' is not assignable to type 'number | null'.
tests/cases/conformance/jsdoc/jsdocDisallowedInTypescript.ts(18,17): error TS17019: Adding a postfix '?' to the end of a type is not valid TypeScript syntax. Did you mean to write 'number | undefined'?
tests/cases/conformance/jsdoc/jsdocDisallowedInTypescript.ts(20,16): error TS17020: Adding a prefix '?' to the start of a type is not valid TypeScript syntax. Did you mean to write 'number'?
tests/cases/conformance/jsdoc/jsdocDisallowedInTypescript.ts(21,16): error TS17020: Adding a prefix '!' to the start of a type is not valid TypeScript syntax. Did you mean to write 'number'?


==== tests/cases/conformance/jsdoc/jsdocDisallowedInTypescript.ts (8 errors) ====
    // grammar error from checker
    var ara: Array.<number> = [1,2,3];
    
    function f(x: ?number, y: Array.<number>) {
                  ~~~~~~~
!!! error TS17020: Adding a prefix '?' to the start of a type is not valid TypeScript syntax. Did you mean to write 'number'?
        return x ? x + y[1] : y[0];
    }
    function hof(ctor: function(new: number, string)) {
        return new ctor('hi');
    }
    function hof2(f: function(this: number, string): string) {
        return f(12, 'hullo');
                     ~~~~~~~
!!! error TS2554: Expected 1 arguments, but got 2.
    }
    var whatevs: * = 1001;
    var ques: ? = 'what';
    var g: function(number, number): number = (n,m) => n + m;
    var most: !string = 'definite';
              ~~~~~~~
!!! error TS17020: Adding a prefix '!' to the start of a type is not valid TypeScript syntax. Did you mean to write 'string'?
    var postfixdef: number! = 101;
                    ~~~~~~~
!!! error TS17019: Adding a postfix '!' to the end of a type is not valid TypeScript syntax. Did you mean to write 'number'?
    var postfixopt: number? = undefined;
        ~~~~~~~~~~
!!! error TS2322: Type 'undefined' is not assignable to type 'number | null'.
                    ~~~~~~~
!!! error TS17019: Adding a postfix '?' to the end of a type is not valid TypeScript syntax. Did you mean to write 'number | undefined'?
    
    var nns: Array<?number>;
                   ~~~~~~~
!!! error TS17020: Adding a prefix '?' to the start of a type is not valid TypeScript syntax. Did you mean to write 'number'?
    var dns: Array<!number>;
                   ~~~~~~~
!!! error TS17020: Adding a prefix '!' to the start of a type is not valid TypeScript syntax. Did you mean to write 'number'?
    var anys: Array<*>;
    
    